cmake_minimum_required(VERSION 3.0)
project(logger)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
if(${ANDROID_RECOVERY_MODE})
    message(STATUS "Android recovery mode")
    set(CMAKE_EXE_LINKER_FLAGS "-static ${CMAKE_EXE_LINKER_FLAGS}")
endif(${ANDROID_RECOVERY_MODE})

set(BUILD_TARGET example)
add_executable(${BUILD_TARGET} example.cc logging.h)
